@@ -51,7 +51,7 @@ public interface StringLookup {
      *
      * <pre>
      * Map&lt;String, Object&gt; map = new HashMap&lt;String, Object&gt;();
-     * map.put("number", new Integer(2));
+     * map.put("number", Integer.valueOf(2));
      * assertEquals("2", StringLookupFactory.mapStringLookup(map).lookup("number"));
      * </pre>
      *
